# FIXME:
# o COIN_DEBUG
#
#
#

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMakeMacros/Modules/Public")

PROJECT(SoFBXFileKit)

FIND_PACKAGE(Coin REQUIRED)
FIND_PACKAGE(FBXSDK REQUIRED)

LINK_DIRECTORIES(${Coin_LIB_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include/boost/tr1/tr1)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${FBXSDK_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${Coin_INCLUDE_DIR})

ADD_DEFINITIONS(${Coin_DEFINES})
ADD_DEFINITIONS(-DCOIN_DEBUG)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(examples)

INSTALL(FILES src/SoFBXFileKit.h DESTINATION include/SoFBXFileKit)
