## Process this file with automake to generate Makefile.in.
## 19990904 mortene.

PublicHeaders = \
	$(top_srcdir)/include/Inventor/actions/SoSubAction.h \
	$(top_srcdir)/include/Inventor/actions/SoActions.h \
	$(top_srcdir)/include/Inventor/actions/SoAction.h \
	$(top_srcdir)/include/Inventor/actions/SoBoxHighlightRenderAction.h \
	$(top_srcdir)/include/Inventor/actions/SoCallbackAction.h \
	$(top_srcdir)/include/Inventor/actions/SoGLRenderAction.h \
	$(top_srcdir)/include/Inventor/actions/SoGetBoundingBoxAction.h \
	$(top_srcdir)/include/Inventor/actions/SoGetMatrixAction.h \
	$(top_srcdir)/include/Inventor/actions/SoGetPrimitiveCountAction.h \
	$(top_srcdir)/include/Inventor/actions/SoHandleEventAction.h \
	$(top_srcdir)/include/Inventor/actions/SoLineHighlightRenderAction.h \
	$(top_srcdir)/include/Inventor/actions/SoPickAction.h \
	$(top_srcdir)/include/Inventor/actions/SoRayPickAction.h \
	$(top_srcdir)/include/Inventor/actions/SoSearchAction.h \
	$(top_srcdir)/include/Inventor/actions/SoWriteAction.h
PrivateHeaders = \
	$(top_srcdir)/include/Inventor/actions/SoSubActionP.h
LinkHackSources = \
	all.cpp
RegularSources = \
	SoAction.cpp \
	SoBoxHighlightRenderAction.cpp \
	SoCallbackAction.cpp \
	SoGLRenderAction.cpp \
	SoGetBoundingBoxAction.cpp \
	SoGetMatrixAction.cpp \
	SoGetPrimitiveCountAction.cpp \
	SoHandleEventAction.cpp \
	SoLineHighlightRenderAction.cpp \
	SoPickAction.cpp \
	SoRayPickAction.cpp \
	SoSearchAction.cpp \
	SoWriteAction.cpp

##$ BEGIN TEMPLATE Make-Common(actions)

# Everything below is autogenerated from a macro, so don't modify
# within the Makefile.am itself. 19991201 mortene.

if HACKING_COMPACT_BUILD
BuildSources = $(LinkHackSources)
else
BuildSources = $(RegularSources)
endif

if BUILD_WITH_MSVC
noinst_LIBRARIES = actions.lst
else
if HACKING_DYNAMIC_MODULES
lib_LTLIBRARIES = libactions@SUFFIX@LINKHACK.la
else
noinst_LTLIBRARIES = libactions.la
endif
endif

# Remove any linklibraries detected by configure, as they are not
# needed in the submodules -- only in the toplevel libCoin build.
LIBS = 

INCLUDES = -I$(top_srcdir)/include

libactions_la_SOURCES = $(BuildSources)
EXTRA_libactions_la_SOURCES = \
	$(PublicHeaders) $(PrivateHeaders) $(RegularSources) $(LinkHackSources)

libactions@SUFFIX@LINKHACK_la_SOURCES = $(BuildSources)
EXTRA_libactions@SUFFIX@LINKHACK_la_SOURCES = \
	$(PublicHeaders) $(PrivateHeaders) $(RegularSources) $(LinkHackSources)

libactionsincdir = $(includedir)/Inventor/actions
libactionsinc_HEADERS = $(PublicHeaders)

actions_lst_SOURCES = $(BuildSources)
EXTRA_actions_lst_SOURCES = \
	$(PublicHeaders) $(PrivateHeaders) $(RegularSources) $(LinkHackSources)

# this rule causes a make warning, so we remove it when it is not in use
actions.lst: Makefile $(actions_lst_OBJECTS)
	@echo "Linking actions.lst..."; \
	rm -f $@; \
	for i in $(actions_lst_OBJECTS); do echo $$i >>$@; done

install-libactionsincHEADERS: $(libactionsinc_HEADERS)
	@$(NORMAL_INSTALL)
	$(mkinstalldirs) $(DESTDIR)$(libactionsincdir)
	@list='$(libactionsinc_HEADERS)'; for p in $$list; do \
	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
	  f="`echo $$p | sed -e 's|^.*/||'`"; \
	  src="$$d$$p"; dst="$(DESTDIR)$(libactionsincdir)/$$f"; \
	  if cmp -s "$$src" "$$dst"; then :; else \
	    echo " $(INSTALL_HEADER) $$src $$dst"; \
	    $(INSTALL_HEADER) "$$src" "$$dst"; \
	  fi \
	done

##$ END TEMPLATE Make-Common
