## Process this file with automake to generate Makefile.in.
## 19990904 mortene.

PublicHeaders = \
	../../include/Inventor/actions/SoSubAction.h \
	../../include/Inventor/actions/SoActions.h \
	../../include/Inventor/actions/SoAction.h \
	../../include/Inventor/actions/SoBoxHighlightRenderAction.h \
	../../include/Inventor/actions/SoCallbackAction.h \
	../../include/Inventor/actions/SoGLRenderAction.h \
	../../include/Inventor/actions/SoGetBoundingBoxAction.h \
	../../include/Inventor/actions/SoGetMatrixAction.h \
	../../include/Inventor/actions/SoGetPrimitiveCountAction.h \
	../../include/Inventor/actions/SoHandleEventAction.h \
	../../include/Inventor/actions/SoLineHighlightRenderAction.h \
	../../include/Inventor/actions/SoPickAction.h \
	../../include/Inventor/actions/SoRayPickAction.h \
	../../include/Inventor/actions/SoSearchAction.h \
	../../include/Inventor/actions/SoToVRMLAction.h \
	../../include/Inventor/actions/SoToVRML2Action.h \
	../../include/Inventor/actions/SoWriteAction.h \
	../../include/Inventor/actions/SoAudioRenderAction.h
PrivateHeaders = \
	../../include/Inventor/actions/SoSubActionP.h \
	SbTri3f.icc SbTri3f.ih
LinkHackSources = \
	all.cpp
RegularSources = \
	SoAction.cpp \
	SoBoxHighlightRenderAction.cpp \
	SoCallbackAction.cpp \
	SoGLRenderAction.cpp \
	SoGetBoundingBoxAction.cpp \
	SoGetMatrixAction.cpp \
	SoGetPrimitiveCountAction.cpp \
	SoHandleEventAction.cpp \
	SoLineHighlightRenderAction.cpp \
	SoPickAction.cpp \
	SoRayPickAction.cpp \
	SoSearchAction.cpp \
	SoToVRMLAction.cpp \
	SoToVRML2Action.cpp \
	SoWriteAction.cpp \
	SoAudioRenderAction.cpp \
	SoIntersectionDetectionAction.cpp

# The SoIntersectionDetectionAction header needs to be under
# Inventor/collision/ for TGS compatibility.

libcollisionincdir = $(includedir)/Inventor/collision
libcollisioninc_HEADERS = \
	../../include/Inventor/collision/SoIntersectionDetectionAction.h

install-libcollisionincHEADERS: $(libcollisioninc_HEADERS)
	@$(NORMAL_INSTALL)
	$(mkinstalldirs) $(DESTDIR)$(libcollisionincdir)
	@list='$(libcollisioninc_HEADERS)'; for p in $$list; do \
	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
	  f="`echo $$p | sed -e 's|^.*/||'`"; \
	  src="$$d$$p"; dst="$(DESTDIR)$(libcollisionincdir)/$$f"; \
	  if cmp -s "$$src" "$$dst"; then :; else \
	    echo " $(INSTALL_HEADER) $$src $$dst"; \
	    $(INSTALL_HEADER) "$$src" "$$dst"; \
	  fi \
	done

##$ BEGIN TEMPLATE Make-Common(actions)
# **************************************************************************
# This template depends on the following variables having been set up before
# its invokation.
#
# PublicHeaders    - header files that should be installed
# PrivateHeaders   - source files that should be distributed, but not
#                    installed - including source-included source files.
# RegularSources   - source files compiled in this directory
# LinkHackSources  - alternative source files used on -enable-compact compilation
# ObsoletedHeaders - header files that should be removed upon installation

# Everything below is autogenerated from a macro, so don't modify
# within the Makefile.am itself. 19991201 mortene.

if HACKING_COMPACT_BUILD
BuildSources = $(LinkHackSources)
else
BuildSources = $(RegularSources)
endif

if BUILD_WITH_MSVC
noinst_LIBRARIES = actions.lst
else
if HACKING_DYNAMIC_MODULES
lib_LTLIBRARIES = libactions@SUFFIX@LINKHACK.la
else
noinst_LTLIBRARIES = libactions.la
endif
endif

# Remove any linklibraries detected by configure, as they are not
# needed in the submodules -- only in the toplevel libCoin build.
LIBS = 

INCLUDES = -I$(top_srcdir)/include -I$(top_builddir)/src/extensions

libactions_la_SOURCES = $(BuildSources)
EXTRA_libactions_la_SOURCES = \
	$(PublicHeaders) $(PrivateHeaders) $(RegularSources) $(LinkHackSources)

libactions@SUFFIX@LINKHACK_la_SOURCES = $(BuildSources)
EXTRA_libactions@SUFFIX@LINKHACK_la_SOURCES = \
	$(PublicHeaders) $(PrivateHeaders) $(RegularSources) $(LinkHackSources)

libactionsincdir = $(includedir)/Inventor/actions
libactionsinc_HEADERS = $(PublicHeaders)

actions_lst_SOURCES = $(BuildSources)
EXTRA_actions_lst_SOURCES = \
	$(PublicHeaders) $(PrivateHeaders) $(RegularSources) $(LinkHackSources)

# this rule causes a make warning, so we remove it when it is not in use
actions.lst: Makefile $(actions_lst_OBJECTS)
	@echo "Linking actions.lst..."; \
	rm -f $@; \
	for i in $(actions_lst_OBJECTS); do echo $$i >>$@; done

install-libactionsincHEADERS: $(libactionsinc_HEADERS)
	@$(NORMAL_INSTALL)
	$(mkinstalldirs) $(DESTDIR)$(libactionsincdir)
	@list='$(libactionsinc_HEADERS)'; for p in $$list; do \
	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
	  f="`echo $$p | sed -e 's|^.*/||'`"; \
	  src="$$d$$p"; dst="$(DESTDIR)$(libactionsincdir)/$$f"; \
	  if cmp -s "$$src" "$$dst"; then :; else \
	    echo " $(INSTALL_HEADER) $$src $$dst"; \
	    $(INSTALL_HEADER) "$$src" "$$dst"; \
	  fi \
	done
	@list='$(ObsoletedHeaders)'; for f in $$list; do \
	  file="$(DESTDIR)$(libactionsincdir)/$$f"; \
	  if test -x "$$file"; then \
	    echo " rm -f $$file"; \
	    rm -f "$$file"; \
	  fi \
	done

##$ END TEMPLATE Make-Common
