if(COIN_BUILD_SINGLE_LIB)
	set(COIN_SOURCE ${COIN_SOURCE}
		base/dict.cpp
		base/hash.cpp
		base/heap.cpp
		base/list.cpp
		base/memalloc.cpp
		base/rbptree.cpp
		base/time.cpp
		base/string.cpp
		base/dynarray.cpp
		base/namemap.cpp
		base/SbBSPTree.cpp
		base/SbByteBuffer.cpp
		base/SbBox2s.cpp
		base/SbBox2i32.cpp
		base/SbBox2f.cpp
		base/SbBox2d.cpp
		base/SbBox3s.cpp
		base/SbBox3i32.cpp
		base/SbBox3f.cpp
		base/SbBox3d.cpp
		base/SbClip.cpp
		base/SbColor.cpp
		base/SbColor4f.cpp
		base/SbCylinder.cpp
		base/SbDict.cpp
		base/SbDPLine.cpp
		base/SbDPMatrix.cpp
		base/SbDPPlane.cpp
		base/SbDPRotation.cpp
		base/SbHeap.cpp
		base/SbImage.cpp
		base/SbLine.cpp
		base/SbMatrix.cpp
		base/SbName.cpp
		base/SbOctTree.cpp
		base/SbPlane.cpp
		base/SbRotation.cpp
		base/SbSphere.cpp
		base/SbString.cpp
		base/SbTesselator.cpp
		base/SbGLUTessellator.cpp
		base/SbTime.cpp
		base/SbVec2b.cpp
		base/SbVec2ub.cpp
		base/SbVec2s.cpp
		base/SbVec2us.cpp
		base/SbVec2i32.cpp
		base/SbVec2ui32.cpp
		base/SbVec2f.cpp
		base/SbVec2d.cpp
		base/SbVec3b.cpp
		base/SbVec3ub.cpp
		base/SbVec3s.cpp
		base/SbVec3us.cpp
		base/SbVec3i32.cpp
		base/SbVec3ui32.cpp
		base/SbVec3f.cpp
		base/SbVec3d.cpp
		base/SbVec4b.cpp
		base/SbVec4ub.cpp
		base/SbVec4s.cpp
		base/SbVec4us.cpp
		base/SbVec4i32.cpp
		base/SbVec4ui32.cpp
		base/SbVec4f.cpp
		base/SbVec4d.cpp
		base/SbViewVolume.cpp
		base/SbDPViewVolume.cpp
		base/SbViewportRegion.cpp
		base/SbXfBox3f.cpp
		base/SbXfBox3d.cpp
		CACHE INTERNAL "COIN_SOURCE"
	)
else()
	add_library(base OBJECT
		dict.cpp
		hash.cpp
		heap.cpp
		list.cpp
		memalloc.cpp
		rbptree.cpp
		time.cpp
		string.cpp
		dynarray.cpp
		namemap.cpp
		SbBSPTree.cpp
		SbByteBuffer.cpp
		SbBox2s.cpp
		SbBox2i32.cpp
		SbBox2f.cpp
		SbBox2d.cpp
		SbBox3s.cpp
		SbBox3i32.cpp
		SbBox3f.cpp
		SbBox3d.cpp
		SbClip.cpp
		SbColor.cpp
		SbColor4f.cpp
		SbCylinder.cpp
		SbDict.cpp
		SbDPLine.cpp
		SbDPMatrix.cpp
		SbDPPlane.cpp
		SbDPRotation.cpp
		SbHeap.cpp
		SbImage.cpp
		SbLine.cpp
		SbMatrix.cpp
		SbName.cpp
		SbOctTree.cpp
		SbPlane.cpp
		SbRotation.cpp
		SbSphere.cpp
		SbString.cpp
		SbTesselator.cpp
		SbGLUTessellator.cpp
		SbTime.cpp
		SbVec2b.cpp
		SbVec2ub.cpp
		SbVec2s.cpp
		SbVec2us.cpp
		SbVec2i32.cpp
		SbVec2ui32.cpp
		SbVec2f.cpp
		SbVec2d.cpp
		SbVec3b.cpp
		SbVec3ub.cpp
		SbVec3s.cpp
		SbVec3us.cpp
		SbVec3i32.cpp
		SbVec3ui32.cpp
		SbVec3f.cpp
		SbVec3d.cpp
		SbVec4b.cpp
		SbVec4ub.cpp
		SbVec4s.cpp
		SbVec4us.cpp
		SbVec4i32.cpp
		SbVec4ui32.cpp
		SbVec4f.cpp
		SbVec4d.cpp
		SbViewVolume.cpp
		SbDPViewVolume.cpp
		SbViewportRegion.cpp
		SbXfBox3f.cpp
		SbXfBox3d.cpp
	)
endif()

file(GLOB_RECURSE SOCPP Sb*.cpp)
set(COIN_DOCUMENTATION_FILES
	${COIN_DOCUMENTATION_FILES}
	${SOCPP}
	${CMAKE_SOURCE_DIR}/src/base/dict.cpp
	${CMAKE_SOURCE_DIR}/src/base/hash.cpp
	${CMAKE_SOURCE_DIR}/src/base/heap.cpp
	${CMAKE_SOURCE_DIR}/src/base/memalloc.cpp
	${CMAKE_SOURCE_DIR}/src/base/namemap.cpp
	${CMAKE_SOURCE_DIR}/src/base/rbptree.cpp
	${CMAKE_SOURCE_DIR}/src/base/string.cpp
	${CMAKE_SOURCE_DIR}/src/base/time.cpp
	CACHE INTERNAL "COIN_DOCUMENTATION_FILES"
)
