## Process this file with automake to generate Makefile.in.
## 19990904 mortene.

if HACKING_COMPACT_BUILD
ALLSOURCES = all.cpp
else
ALLSOURCES = \
	SbBSPTree.cpp \
	$(top_srcdir)/include/Inventor/SbBSPTree.h \
	SbBox2f.cpp \
	$(top_srcdir)/include/Inventor/SbBox2f.h \
	SbBox2s.cpp \
	$(top_srcdir)/include/Inventor/SbBox2s.h \
	SbBox3f.cpp \
	$(top_srcdir)/include/Inventor/SbBox3f.h \
	SbColor.cpp \
	$(top_srcdir)/include/Inventor/SbColor.h \
	SbColor4f.cpp \
	$(top_srcdir)/include/Inventor/SbColor4f.h \
	SbCylinder.cpp \
	$(top_srcdir)/include/Inventor/SbCylinder.h \
	SbDict.cpp \
	$(top_srcdir)/include/Inventor/SbDict.h \
	SbHeap.cpp \
	$(top_srcdir)/include/Inventor/SbHeap.h \
	SbImage.cpp \
	$(top_srcdir)/include/Inventor/SbImage.h \
	SbLine.cpp \
	$(top_srcdir)/include/Inventor/SbLine.h \
	SbMatrix.cpp \
	$(top_srcdir)/include/Inventor/SbMatrix.h \
	SbName.cpp \
	$(top_srcdir)/include/Inventor/SbName.h \
	SbOctTree.cpp \
	$(top_srcdir)/include/Inventor/SbOctTree.h \
	SbPlane.cpp \
	$(top_srcdir)/include/Inventor/SbPlane.h \
	SbRotation.cpp \
	$(top_srcdir)/include/Inventor/SbRotation.h \
	SbSphere.cpp \
	$(top_srcdir)/include/Inventor/SbSphere.h \
	SbString.cpp \
	$(top_srcdir)/include/Inventor/SbString.h \
	SbTesselator.cpp \
	$(top_srcdir)/include/Inventor/SbTesselator.h \
	SbTime.cpp \
	$(top_srcdir)/include/Inventor/SbTime.h \
	SbVec2f.cpp \
	$(top_srcdir)/include/Inventor/SbVec2f.h \
	SbVec2s.cpp \
	$(top_srcdir)/include/Inventor/SbVec2s.h \
	SbVec3f.cpp \
	$(top_srcdir)/include/Inventor/SbVec3f.h \
	SbVec4f.cpp \
	$(top_srcdir)/include/Inventor/SbVec4f.h \
	SbViewVolume.cpp \
	$(top_srcdir)/include/Inventor/SbViewVolume.h \
	SbViewportRegion.cpp \
	$(top_srcdir)/include/Inventor/SbViewportRegion.h \
	SbXfBox3f.cpp \
	$(top_srcdir)/include/Inventor/SbXfBox3f.h
endif

ALLINSTHEADERS = 

##$ BEGIN TEMPLATE Make-Common(base)

# Everything below is autogenerated from a macro, so don't modify
# within the Makefile.am itself. 19991201 mortene.

if HACKING_DYNAMIC_MODULES
lib_LTLIBRARIES = libbase@SUFFIX@LINKHACK.la
else
noinst_LTLIBRARIES = libbase.la
endif

# Remove any linklibraries detected by configure, as they are not
# needed in the submodules -- only in the toplevel libCoin build.
LIBS = 

INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/include -I$(top_builddir)/include

libbase_la_SOURCES = $(ALLSOURCES)
libbase@SUFFIX@LINKHACK_la_SOURCES = $(ALLSOURCES)

libbaseincdir = $(includedir)/Inventor/base
libbaseinc_HEADERS = $(ALLINSTHEADERS)

##$ END TEMPLATE Make-Common
