## Process this file with automake to generate Makefile.in.
## 19990904 mortene.

RegularSources = \
	SbBSPTree.cpp \
	SbBox2f.cpp \
	SbBox2s.cpp \
	SbBox3f.cpp \
	SbClip.cpp \
	SbColor.cpp \
	SbColor4f.cpp \
	SbCylinder.cpp \
	SbDict.cpp \
	SbHeap.cpp \
	SbImage.cpp \
	SbLine.cpp \
	SbMatrix.cpp \
	SbName.cpp \
	SbOctTree.cpp \
	SbPlane.cpp \
	SbRotation.cpp \
	SbSphere.cpp \
	SbString.cpp \
	SbTesselator.cpp \
	SbTime.cpp \
	SbVec2f.cpp \
	SbVec2s.cpp \
	SbVec3f.cpp \
	SbVec4f.cpp \
	SbViewVolume.cpp \
	SbViewportRegion.cpp \
	SbXfBox3f.cpp
LinkHackSources = \
	all.cpp
PublicHeaders =
PrivateHeaders = \
	$(top_srcdir)/include/Inventor/SbBSPTree.h \
	$(top_srcdir)/include/Inventor/SbBox2f.h \
	$(top_srcdir)/include/Inventor/SbBox2s.h \
	$(top_srcdir)/include/Inventor/SbBox3f.h \
	$(top_srcdir)/include/Inventor/SbClip.h \
	$(top_srcdir)/include/Inventor/SbColor.h \
	$(top_srcdir)/include/Inventor/SbColor4f.h \
	$(top_srcdir)/include/Inventor/SbCylinder.h \
	$(top_srcdir)/include/Inventor/SbDict.h \
	$(top_srcdir)/include/Inventor/SbHeap.h \
	$(top_srcdir)/include/Inventor/SbImage.h \
	$(top_srcdir)/include/Inventor/SbLine.h \
	$(top_srcdir)/include/Inventor/SbMatrix.h \
	$(top_srcdir)/include/Inventor/SbName.h \
	$(top_srcdir)/include/Inventor/SbOctTree.h \
	$(top_srcdir)/include/Inventor/SbPlane.h \
	$(top_srcdir)/include/Inventor/SbRotation.h \
	$(top_srcdir)/include/Inventor/SbSphere.h \
	$(top_srcdir)/include/Inventor/SbString.h \
	$(top_srcdir)/include/Inventor/SbTesselator.h \
	$(top_srcdir)/include/Inventor/SbTime.h \
	$(top_srcdir)/include/Inventor/SbVec2f.h \
	$(top_srcdir)/include/Inventor/SbVec2s.h \
	$(top_srcdir)/include/Inventor/SbVec3f.h \
	$(top_srcdir)/include/Inventor/SbVec4f.h \
	$(top_srcdir)/include/Inventor/SbViewVolume.h \
	$(top_srcdir)/include/Inventor/SbViewportRegion.h \
	$(top_srcdir)/include/Inventor/SbXfBox3f.h

##$ BEGIN TEMPLATE Make-Common(base)

# Everything below is autogenerated from a macro, so don't modify
# within the Makefile.am itself. 19991201 mortene.

if HACKING_COMPACT_BUILD
BuildSources = $(LinkHackSources)
else
BuildSources = $(RegularSources)
endif

if BUILD_WITH_MSVC
noinst_LIBRARIES = base.lst
else
if HACKING_DYNAMIC_MODULES
lib_LTLIBRARIES = libbase@SUFFIX@LINKHACK.la
else
noinst_LTLIBRARIES = libbase.la
endif
endif

# Remove any linklibraries detected by configure, as they are not
# needed in the submodules -- only in the toplevel libCoin build.
LIBS = 

INCLUDES = -I$(top_srcdir)/include

libbase_la_SOURCES = $(BuildSources)
EXTRA_libbase_la_SOURCES = \
	$(PublicHeaders) $(PrivateHeaders) $(RegularSources) $(LinkHackSources)

libbase@SUFFIX@LINKHACK_la_SOURCES = $(BuildSources)
EXTRA_libbase@SUFFIX@LINKHACK_la_SOURCES = \
	$(PublicHeaders) $(PrivateHeaders) $(RegularSources) $(LinkHackSources)

libbaseincdir = $(includedir)/Inventor/base
libbaseinc_HEADERS = $(PublicHeaders)

if BUILD_WITH_MSVC
base_lst_SOURCES = $(BuildSources)
EXTRA_base_lst_SOURCES = \
	$(PublicHeaders) $(PrivateHeaders) $(RegularSources) $(LinkHackSources)

# this rule causes a make warning, so we remove it when it is not in use
base.lst: Makefile $(base_lst_OBJECTS)
	@echo "Linking base.lst..."; \
	echo $(CC) /LST:base.lst \
	  $(base_lst_OBJECTS); \
	$(CC) /LST:base.lst \
	  $(base_lst_OBJECTS);
endif

##$ END TEMPLATE Make-Common
