## Process this file with automake to generate Makefile.in.
## 19990904 mortene.

if BUILD_WITH_THREADS
# None yet.
ThreadsDependentSources = 
else
ThreadsDependentSources =
endif

RegularSources = \
	base.c \
	debug.c \
	memalloc.c \
	time.c \
	SbBSPTree.cpp \
	SbBox2s.cpp \
	SbBox2f.cpp \
	SbBox2d.cpp \
	SbBox3f.cpp \
	SbClip.cpp \
	SbColor.cpp \
	SbColor4f.cpp \
	SbCylinder.cpp \
	SbDict.cpp \
	SbDPLine.cpp \
	SbDPMatrix.cpp \
	SbDPPlane.cpp \
	SbDPRotation.cpp \
	SbHeap.cpp \
	SbImage.cpp \
	SbLine.cpp \
	SbMatrix.cpp \
	SbName.cpp \
	SbOctTree.cpp \
	SbPlane.cpp \
	SbRotation.cpp \
	SbSphere.cpp \
	SbString.cpp \
	SbTesselator.cpp \
	SbTime.cpp \
	SbVec2s.cpp \
	SbVec2f.cpp \
	SbVec2d.cpp \
	SbVec3s.cpp \
	SbVec3f.cpp \
	SbVec3d.cpp \
	SbVec4f.cpp \
	SbVec4d.cpp \
	SbViewVolume.cpp \
	SbDPViewVolume.cpp \
	SbViewportRegion.cpp \
	SbXfBox3f.cpp \
	$(ThreadsDependentSources)
LinkHackSources = \
	all.cpp
PublicHeaders =
PrivateHeaders = \
	../../include/Inventor/C/memalloc.h \
	../../include/Inventor/SbBSPTree.h \
	../../include/Inventor/SbBox2f.h \
	../../include/Inventor/SbBox2s.h \
	../../include/Inventor/SbBox3f.h \
	../../include/Inventor/SbClip.h \
	../../include/Inventor/SbColor.h \
	../../include/Inventor/SbColor4f.h \
	../../include/Inventor/SbCylinder.h \
	../../include/Inventor/SbDict.h \
	../../include/Inventor/SbDPLine.h \
	../../include/Inventor/SbDPLinear.h \
	../../include/Inventor/SbDPMatrix.h \
	../../include/Inventor/SbDPPlane.h \
	../../include/Inventor/SbDPRotation.h \
	../../include/Inventor/SbHeap.h \
	../../include/Inventor/SbImage.h \
	../../include/Inventor/SbLine.h \
	../../include/Inventor/SbLinear.h \
	../../include/Inventor/SbMatrix.h \
	../../include/Inventor/SbName.h \
	../../include/Inventor/SbOctTree.h \
	../../include/Inventor/SbPlane.h \
	../../include/Inventor/SbRotation.h \
	../../include/Inventor/SbSphere.h \
	../../include/Inventor/SbString.h \
	../../include/Inventor/SbTesselator.h \
	../../include/Inventor/SbTime.h \
	../../include/Inventor/SbVec2s.h \
	../../include/Inventor/SbVec2f.h \
	../../include/Inventor/SbVec2d.h \
	../../include/Inventor/SbVec3s.h \
	../../include/Inventor/SbVec3f.h \
	../../include/Inventor/SbVec3d.h \
	../../include/Inventor/SbVec4f.h \
	../../include/Inventor/SbVec4d.h \
	../../include/Inventor/SbViewVolume.h \
	../../include/Inventor/SbDPViewVolume.h \
	../../include/Inventor/SbViewportRegion.h \
	../../include/Inventor/SbXfBox3f.h

##$ BEGIN TEMPLATE Make-Common(base)

# Everything below is autogenerated from a macro, so don't modify
# within the Makefile.am itself. 19991201 mortene.

if HACKING_COMPACT_BUILD
BuildSources = $(LinkHackSources)
else
BuildSources = $(RegularSources)
endif

if BUILD_WITH_MSVC
noinst_LIBRARIES = base.lst
else
if HACKING_DYNAMIC_MODULES
lib_LTLIBRARIES = libbase@SUFFIX@LINKHACK.la
else
noinst_LTLIBRARIES = libbase.la
endif
endif

# Remove any linklibraries detected by configure, as they are not
# needed in the submodules -- only in the toplevel libCoin build.
LIBS = 

INCLUDES = -I$(top_srcdir)/include -I$(top_builddir)/src/extensions

libbase_la_SOURCES = $(BuildSources)
EXTRA_libbase_la_SOURCES = \
	$(PublicHeaders) $(PrivateHeaders) $(RegularSources) $(LinkHackSources)

libbase@SUFFIX@LINKHACK_la_SOURCES = $(BuildSources)
EXTRA_libbase@SUFFIX@LINKHACK_la_SOURCES = \
	$(PublicHeaders) $(PrivateHeaders) $(RegularSources) $(LinkHackSources)

libbaseincdir = $(includedir)/Inventor/base
libbaseinc_HEADERS = $(PublicHeaders)

base_lst_SOURCES = $(BuildSources)
EXTRA_base_lst_SOURCES = \
	$(PublicHeaders) $(PrivateHeaders) $(RegularSources) $(LinkHackSources)

# this rule causes a make warning, so we remove it when it is not in use
base.lst: Makefile $(base_lst_OBJECTS)
	@echo "Linking base.lst..."; \
	rm -f $@; \
	for i in $(base_lst_OBJECTS); do echo $$i >>$@; done

install-libbaseincHEADERS: $(libbaseinc_HEADERS)
	@$(NORMAL_INSTALL)
	$(mkinstalldirs) $(DESTDIR)$(libbaseincdir)
	@list='$(libbaseinc_HEADERS)'; for p in $$list; do \
	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
	  f="`echo $$p | sed -e 's|^.*/||'`"; \
	  src="$$d$$p"; dst="$(DESTDIR)$(libbaseincdir)/$$f"; \
	  if cmp -s "$$src" "$$dst"; then :; else \
	    echo " $(INSTALL_HEADER) $$src $$dst"; \
	    $(INSTALL_HEADER) "$$src" "$$dst"; \
	  fi \
	done

##$ END TEMPLATE Make-Common
